k8s/forge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forge-deployment
  namespace: aether
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forge
  template:
    metadata:
      labels:
        app: forge
    spec:
      nodeSelector:
        node-group: forge
      hostPID: true
      containers:
        - name: forge-container
          image: vsramchaik/aether-forge:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "550m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: forge-service
  namespace: aether
spec:
  selector:
    app: forge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
