k8s/launchpad.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: launchpad-deployment
  namespace: aether
  annotations:
    reloader.stakater.com/auto: "true" # Enable reloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: launchpad-app
  template:
    metadata:
      labels:
        app: launchpad-app
      annotations:
        reloader.stakater.com/match: "proxy-ip-config" # Watch for changes in this ConfigMap
    spec:
      nodeSelector:
        node-group: general
      serviceAccountName: launchpad-sa
      containers:
        - name: launchpad-app-container
          image: vsramchaik/aether-launchpad:latest
          ports:
            - containerPort: 8000 # HTTP server
            - containerPort: 50051 # gRPC
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
            limits:
              memory: 750Mi
              cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: launchpad-service
  namespace: aether
spec:
  selector:
    app: launchpad-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
