k8s/logify.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logify-deployment
  namespace: aether
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logify
  template:
    metadata:
      labels:
        app: logify
    spec:
      nodeSelector:
        node-group: forge
      containers:
        - name: logify-container
          image: vsramchaik/aether-logify:latest
          ports:
            - containerPort: 8000 # HTTP server
            - containerPort: 50051 # gRPC
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: logify-service
  namespace: aether
spec:
  selector:
    app: logify
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
