k8s/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
  namespace: aether
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      nodeSelector:
        node-group: general
      containers:
        - name: proxy-container
          image: vsramchaik/aether-proxy:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: aether
spec:
  selector:
    app: proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
